--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(BlueCatServer)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(BlueCatServer main.cpp Log/Log.cpp Log/Log.h model/model.cpp model/model.h TCPServer/TestServer.cpp TCPServer/TestServer.h TCPServer/DealReq.cpp TCPServer/DealReq.h)
+add_executable(BlueCatServer main.cpp Log/Log.cpp Log/Log.h model/model.cpp model/model.h TCPServer/TestServer.cpp TCPServer/TestServer.h TCPServer/DealReq.cpp TCPServer/DealReq.h Tools/ThreadPool.cpp Tools/ThreadPool.h)
